ELB/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      name: demo-pod
      labels:
        tier: frontend
    spec:
      containers:
      - image: nginx
        name: demo-container
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
  selector:
    tier: frontend
