ELB/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: my-spring-boot-app
