ELB/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-frontend-app-ingress
  labels:
    app: myapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-00c853ba29eb48d3c, subnet-0b12c0cac23004261
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:992293216837:certificate/47a4324c-f48b-4e2d-a94a-f5d761b72920
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - host: myapp.waghangad.com
    http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
