ELB/fargate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-frontend-app-ingress
  labels:
    app: myapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - host: myapp.waghangad.com
    http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
